# FLAPPY_BIRD

./: CMakeLists.txt  game.cpp  game.h  main.cpp
